--- a/core/templates/core/loguin.html
+++ b/core/templates/core/loguin.html
@@ -31,7 +31,7 @@
                             <input type="text" autofocus="" class="form-control">
                         </div>
                         <div class="form-group">
-                            <label>Password</label>
+                            <label>Contraseña</label>
                             <input type="password" class="form-control">
                         </div>
                         <div class="form-group text-right">
