Fix1: estableciendo index, login y home

--- a/core/templates/core/bodega.html
+++ b/core/templates/core/bodega.html
@@ -1,4 +1,4 @@
-{% extends 'core/base_inventario.html' %}
+{% extends 'core/base_home.html' %}
 {% block contenido %}
 <div class="page-wrapper">
     <div class="content">
