--- a/core/templates/core/base_home.html
+++ b/core/templates/core/base_home.html
@@ -136,10 +136,10 @@
                         <span>Admin</span>
                     </a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="profile.html">My Profile</a>
-                        <a class="dropdown-item" href="edit-profile.html">Edit Profile</a>
-                        <a class="dropdown-item" href="settings.html">Settings</a>
-                        <a class="dropdown-item" href="login.html">Logout</a>
+                        <a class="dropdown-item" href="profile.html">Mi Perfil</a>
+                        <a class="dropdown-item" href="edit-profile.html">Editar Perfil</a>
+                        <a class="dropdown-item" href="settings.html">Ajustes</a>
+                        <a class="dropdown-item" href="{% url 'login' %}">Salir</a>
                     </div>
                 </li>
             </ul>
@@ -160,7 +160,7 @@
                     <ul>
                         <li class="menu-title">Main</li>
                         <li class="active">
-                            <a href="{% url 'inventario' %}"><i class="fa fa-dashboard"></i> <span>Inicio</span></a>
+                            <a href="{% url 'base_home' %}"><i class="fa fa-dashboard"></i> <span>Inicio</span></a>
                         </li>
 
                         <li class="submenu">
