--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -2,6 +2,7 @@
 
 
 <!-- login23:11-->
+
 <head>
     {% load static %}
     <meta charset="utf-8">
@@ -20,10 +21,10 @@
 <body>
     <div class="main-wrapper account-wrapper">
         <div class="account-page">
-			<div class="account-center">
-				<div class="account-box">
+            <div class="account-center">
+                <div class="account-box">
                     <form action="http://dreamguys.co.in/preclinic/template/index.html" class="form-signin">
-						<div class="account-logo">
+                        <div class="account-logo">
                             <a href="index-2.html"><img src="{% static 'core/assets/img/logo-dark.png' %}" alt=""></a>
                         </div>
                         <div class="form-group">
@@ -41,19 +42,20 @@
                             <button type="submit" class="btn btn-primary account-btn">Login</button>
                         </div>
                         <div class="text-center register-link">
-                            Don’t have an account? <a href="register.html">Register Now</a>
+                            Don’t have an account? <a href="{% url 'base_home' %}">Register Now</a>
                         </div>
                     </form>
                 </div>
-			</div>
+            </div>
         </div>
     </div>
     <script src="{% static 'core/assets/js/jquery-3.2.1.min.js' %}"></script>
-	<script src="{% static 'core/assets/js/popper.min.js' %}"></script>
+    <script src="{% static 'core/assets/js/popper.min.js' %}"></script>
     <script src="{% static 'core/assets/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'core/assets/js/app.js' %}"></script>
 </body>
 
 
 <!-- login23:12-->
+
 </html>
