--- a/core/templates/core/baseVP.html
+++ b/core/templates/core/baseVP.html
@@ -1,3 +1,10 @@
+<!-- 
+PROJECT: Medic | Medical HTML Template
+VERSION: 1.0.0
+AUTHOR: Themefisher
+WEBSITE: https://themefisher.com
+-->
+
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
@@ -129,151 +136,14 @@
 
 <section class="team-section section" align="center">
 
-    {% block cabecera %}{% endblock %}
-    {% block pie %}{% endblock %}
-</section>
 
+</section>
 
 
 <!--====  End of Page Slider  ====-->
 
 <!--testimonial-section-->
-<section class="testimonial-section" style="background: url(images/testimonials/1.jpg);">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="section-title text-center">
-            <h3>What Our
-              <span>Patients Says</span>
-            </h3>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="testimonial-carousel">
-            <!--Slide Item-->
-            <div class="slide-item">
-              <div class="inner-box text-center">
-                <div class="image-box">
-                  <figure>
-                    <img loading="lazy" src="{% static 'core/images/testimonials/1.png' %}" alt="">
-                  </figure>
-                </div>
-                <h6>Adam Rose</h6>
-                <p class="mb-0">Neque porro quisquam est, qui dolorem ipsum quia consectetur, dolor sit amet, consectetur, numquam Lorem
-                  ipsum dolor sit amet consectetur adipisicing elit. Molestias, at?</p>
-              </div>
-            </div>
-            <!--Slide Item-->
-            <div class="slide-item">
-              <div class="inner-box text-center">
-                <div class="image-box">
-                  <figure>
-                    <img loading="lazy" src="{% static 'core/images/testimonials/2.png' %}" alt="">
-                  </figure>
-                </div>
-                <h6>David Warner</h6>
-                <p class="mb-0">Neque porro quisquam est, qui dolorem ipsum quia consectetur, dolor sit amet, consectetur, numquam Lorem
-                  ipsum dolor sit amet consectetur adipisicing elit. Molestias, at?</p>
-              </div>
-            </div>
-            <!--Slide Item-->
-            <div class="slide-item">
-              <div class="inner-box text-center">
-                <div class="image-box">
-                  <figure>
-                    <img loading="lazy" src="{% static 'core/images/testimonials/3.png' %}" alt="">
-                  </figure>
-                </div>
-                <h6>Amy Adams</h6>
-                <p class="mb-0">Neque porro quisquam est, qui dolorem ipsum quia consectetur, dolor sit amet, consectetur, numquam Lorem
-                  ipsum dolor sit amet consectetur adipisicing elit. Molestias, at?</p>
-              </div>
-            </div>
-            <!--Slide Item-->
-            <div class="slide-item">
-              <div class="inner-box text-center">
-                <div class="image-box">
-                  <figure>
-                    <img loading="lazy" src="{% static 'core/images/testimonials/1.png' %}" alt="">
-                  </figure>
-                </div>
-                <h6>Adam Rose</h6>
-                <p class="mb-0">Neque porro quisquam est, qui dolorem ipsum quia consectetur, dolor sit amet, consectetur, numquam Lorem
-                  ipsum dolor sit amet consectetur adipisicing elit. Molestias, at?</p>
-              </div>
-            </div>
-            <!--Slide Item-->
-            <div class="slide-item">
-              <div class="inner-box text-center">
-                <div class="image-box">
-                  <figure>
-                    <img loading="lazy" src="{% static 'core/images/testimonials/2.png' %}" alt="">
-                  </figure>
-                </div>
-                <h6>David Warner</h6>
-                <p class="mb-0">Neque porro quisquam est, qui dolorem ipsum quia consectetur, dolor sit amet, consectetur, numquam Lorem
-                  ipsum dolor sit amet consectetur adipisicing elit. Molestias, at?</p>
-              </div>
-            </div>
-            <!--Slide Item-->
-            <div class="slide-item">
-              <div class="inner-box text-center">
-                <div class="image-box">
-                  <figure>
-                    <img loading="lazy" src="{% static 'core/images/testimonials/3.png' %}" alt="">
-                  </figure>
-                </div>
-                <h6>Amy Adams</h6>
-                <p class="mb-0">Neque porro quisquam est, qui dolorem ipsum quia consectetur, dolor sit amet, consectetur, numquam Lorem
-                  ipsum dolor sit amet consectetur adipisicing elit. Molestias, at?</p>
-              </div>
-            </div>
-            <!--Slide Item-->
-            <div class="slide-item">
-              <div class="inner-box text-center">
-                <div class="image-box">
-                  <figure>
-                    <img loading="lazy" src="{% static 'core/images/testimonials/1.png' %}" alt="">
-                  </figure>
-                </div>
-                <h6>Adam Rose</h6>
-                <p class="mb-0">Neque porro quisquam est, qui dolorem ipsum quia consectetur, dolor sit amet, consectetur, numquam Lorem
-                  ipsum dolor sit amet consectetur adipisicing elit. Molestias, at?</p>
-              </div>
-            </div>
-            <!--Slide Item-->
-            <div class="slide-item">
-              <div class="inner-box text-center">
-                <div class="image-box">
-                  <figure>
-                    <img loading="lazy" src="{% static 'core/images/testimonials/2.png' %}" alt="">
-                  </figure>
-                </div>
-                <h6>David Warner</h6>
-                <p class="mb-0">Neque porro quisquam est, qui dolorem ipsum quia consectetur, dolor sit amet, consectetur, numquam Lorem
-                  ipsum dolor sit amet consectetur adipisicing elit. Molestias, at?</p>
-              </div>
-            </div>
-            <!--Slide Item-->
-            <div class="slide-item">
-              <div class="inner-box text-center">
-                <div class="image-box">
-                  <figure>
-                    <img loading="lazy" src="{% static 'core/images/testimonials/3.png' %}" alt="">
-                  </figure>
-                </div>
-                <h6>Amy Adams</h6>
-                <p class="mb-0">Neque porro quisquam est, qui dolorem ipsum quia consectetur, dolor sit amet, consectetur, numquam Lorem
-                  ipsum dolor sit amet consectetur adipisicing elit. Molestias, at?</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+
   <!--End testimonial-section-->
 
 <!--about section-->
@@ -281,6 +151,13 @@
 <!--End about section-->
 
 <!--Start about us area-->
+
+<section class="service-tab-section section" align="center">
+  <div class="outer-box clearfix">
+    {% block cabecera %}{% endblock %}
+    {% block pie %}{% endblock %}
+  </div>
+</section>
 
 <!--End about us area-->
 
