--- a/core/templates/core/presentacion.html
+++ b/core/templates/core/presentacion.html
@@ -1,5 +1,5 @@
 <!-- Heredar de la plantilla base -->
-{% extends 'core/homeBaseVP.html' %}
+{% extends 'core/baseVP.html' %}
 
 <!-- Llenar el bloque cabecera -->
 {% block cabecera %}
