--- a/core/templates/core/BaseDoctor.html
+++ b/core/templates/core/BaseDoctor.html
@@ -76,7 +76,7 @@
                     <ul>
                         <li class="menu-title">Main</li>
                         <li class="active">
-                            <a href="  "><i class="fa fa-dashboard"></i> <span>Inicio</span></a>
+                            <a href="  "><i class="fa fa-dashboard"></i> <span>Inicio2</span></a>
                         </li>
 						
                         <li class="submenu">
