--- a/core/templates/core/medic/basem.html
+++ b/core/templates/core/medic/basem.html
@@ -170,14 +170,13 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="{% url 'schedule' %}"><i class="fa fa-calendar"></i> <span>Agenda</span></a>
+                            <a href="{% url 'appointments' %}"><i class="fa fa-calendar"></i> <span>Agenda</span></a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
         {% block content %}
-
         {% endblock %}
 
     </div>
