Arreglo de vistas en enfermera yfarmaceuta

--- a/core/templates/core/medic/basem.html
+++ b/core/templates/core/medic/basem.html
@@ -170,7 +170,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="{% url 'appointments' %}"><i class="fa fa-calendar"></i> <span>Agenda</span></a>
+                            <a href="{% url 'schedule' %}"><i class="fa fa-calendar"></i> <span>Agenda</span></a>
                         </li>
                     </ul>
                 </div>
