--- a/core/templates/core/nursing/add-patient.html
+++ b/core/templates/core/nursing/add-patient.html
@@ -1,3 +1,6 @@
+{% extends 'core/nursing/basen.html' %}
+{% block content %}
+{% load static from staticfiles %}
 <div class="page-wrapper">
     <div class="content">
         <div class="row">
@@ -13,54 +16,45 @@
                         <div class="col-sm-6">
                             <div class="form-group">
                                 <label>Nombres<span class="text-danger">*</span></label>
-                                <input class="form-control" type="text">
+
                                 {{form.name}}
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
                                 <label>Apellidos</label>
-                                <input class="form-control" type="text">
+
                                 {{form.lastname}}
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
                                 <label>Email <span class="text-danger">*</span></label>
-                                <input class="form-control" type="email">
+
                                 {{form.email}}
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
                                 <label>DNI</label>
-                                <input class="form-control" type="text">
                                 {{form.dni}}
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-12">
                             <div class="form-group gender-select">
                                 <label class="gen-label">Gender:</label>
                                 <div class="form-check-inline">
                                     <label class="form-check-label">
-                                        <input type="radio" name="gender" class="form-check-input">
-                                        {{form.gender}}Hombre
-                                    </label>
-                                </div>
-                                <div class="form-check-inline">
-                                    <label class="form-check-label">
-                                        <input type="radio" name="gender" class="form-check-input">
-                                        {{form.gender}}Mujer
+                                        Hombre{{form.gender}}
                                     </label>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-12">
+                        <div class="col-sm-">
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label>Direccion</label>
-                                        <input type="text" class="form-control ">
                                         {{form.address}}
                                     </div>
                                 </div>
@@ -69,13 +63,16 @@
                         <div class="col-sm-6">
                             <div class="form-group">
                                 <label>Telefono </label>
-                                <input class="form-control" type="text">
                                 {{form.phone}}
                             </div>
                         </div>
+                    </div>
+                    <div class="m-t-20 text-center">
+                        <button class="btn btn-primary submit-btn">Agregar Paciente</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
+{% endblock %}
