--- a/core/templates/core/pharmacist/add-inventory.html
+++ b/core/templates/core/pharmacist/add-inventory.html
@@ -44,52 +44,49 @@
                         </div>
                         <div class="form-group row">
                             <label for="example-number-input" class="col-2 col-form-label">Stock</label>
-                            <div class="col-10">
+                            <div class="col-md-10">
                                 {{form.stocks}}
                             </div>
                             <div class="form-group row">
-                                <label class="col-form-label col-md-2">Input Addons</label>
                                 <div class="col-md-10">
                                     <div class="input-group">
-                                        <div class="input-group">
-                                            <div class="input-group-addon">Costo</div>
-                                            {{form.cost}}
-                                        </div>
+                                        <div class="input-group-addon">Costo</div>
+                                        {{form.cost}}
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-group row">
-                                <label class="col-form-label col-md-2">Input Addons</label>
-                                <div class="col-md-10">
-                                    <div class="input-group">
-                                        <div class="input-group">
-                                            <div class="input-group-addon">Valor Unitario</div>
-                                            {{form.unitvalue}}
-                                        </div>
-                                    </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-md-10">
+                                <div class="input-group">
+                                    <div class="input-group-addon">Valor Unitario</div>
+                                    {{form.unitvalue}}
                                 </div>
                             </div>
-                            <div class="form-group row">
-                                <label class="col-form-label col-md-2">Input Addons</label>
-                                <div class="col-md-10">
-                                    <div class="input-group">
-                                        <div class="input-group">
-                                            <div class="input-group-addon">Valor paquete</div>
-                                            {{form.packagevalue}}
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label>Fecha de vencimiento</label>
-                                <div class="cal-icon">
-                                    {{form.duedate}}
-                                </div>
-                            </div>
-                    </form>
+                        </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-md-10">
+                        <div class="input-group">
+                            <div class="input-group-addon">Valor paquete</div>
+                            {{form.packagevalue}}
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div class="form-group row">
+                <label>Fecha de vencimiento</label>
+                <div class="col-md-10">
+                    {{form.duedate}}
+                </div>
+            </div>
+            <div class="m-t-20 text-center">
+                <button class="btn btn-primary submit-btn">Agregar Porducto</button>
+            </div>
+            </form>
         </div>
     </div>
+</div>
+</div>
 </div>
 {% endblock %}
