--- a/core/templates/core/pharmacist/basep.html
+++ b/core/templates/core/pharmacist/basep.html
@@ -133,7 +133,7 @@
                                 alt="Admin">
                             <span class="status online"></span>
                         </span>
-                        <span>{% block user %}{% endblock %}</span>
+                        <span><b>{{request.user.first_name}} {{request.user.last_name}}</b></span>
                     </a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="profile.html">Mi Perfil</a>
