Presentacion del proyecto

--- a/core/templates/core/medic/basem.html
+++ b/core/templates/core/medic/basem.html
@@ -133,10 +133,10 @@
                                 alt="Admin">
                             <span class="status online"></span>
                         </span>
-                        <span>{% block user %}{% endblock %}</span>
+                        <span><b>{{request.user.first_name}} {{request.user.last_name}}</b></span>
                     </a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="{% url 'profile' %}">Mi Perfil</a>
+                        <a class="dropdown-item" href="#">Mi Perfil</a>
                         <a class="dropdown-item" href="edit-profile.html">Editar Perfil</a>
                         <a class="dropdown-item" href="settings.html">Ajustes</a>
                         <a class="dropdown-item" href="{% url 'index' %}">Salir</a>
@@ -147,7 +147,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i
                         class="fa fa-ellipsis-v"></i></a>
                 <div class="dropdown-menu dropdown-menu-right">
-                    <a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
+                    <a class="dropdown-item" href="#">My Profile</a>
                     <a class="dropdown-item" href="edit-profile.html">Edit Profile</a>
                     <a class="dropdown-item" href="settings.html">Settings</a>
                     <a class="dropdown-item" href="{% url 'index' %}">Logout</a>
@@ -166,7 +166,7 @@
                             <a href=""><i class="fa fa-wheelchair"></i> <span> Pacientes </span> <span
                                     class="menu-arrow"></span></a>
                             <ul style="display: none;">
-                                <li><a href="{% url 'patients' %}">Lista de Pacientes</a></li>
+                                <li><a href="{% url 'patientsm' %}">Lista de Pacientes</a></li>
                             </ul>
                         </li>
                         <li>
