--- a/core/templates/core/nursing/add-patient.html
+++ b/core/templates/core/nursing/add-patient.html
@@ -42,10 +42,10 @@
                         </div>
                         <div class="col-sm-12">
                             <div class="form-group gender-select">
-                                <label class="gen-label">Gender:</label>
+                                <label class="gen-label">Genero:</label>
                                 <div class="form-check-inline">
                                     <label class="form-check-label">
-                                        Hombre{{form.gender}}
+                                        {{form.gender}}
                                     </label>
                                 </div>
                             </div>
